// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Spinner /> with a color matches its snapshot 1`] = `
<div
  className="y-spinner y-spinner__color-dark y-spinner__size-medium"
>
  <Spinner
    ariaLive="polite"
    className="y-spinner--circle"
    size={2}
  />
  <Text
    className="y-spinner--label"
    color="white"
    size="mediumSub"
  >
    Loading
  </Text>
</div>
`;

exports[`<Spinner /> with a size matches its snapshot 1`] = `
<div
  className="y-spinner y-spinner__color-light y-spinner__size-xSmall"
>
  <Spinner
    ariaLive="polite"
    className="y-spinner--circle"
    size={0}
  />
  <Text
    className="y-spinner--label"
    color="primary"
    size="small"
  >
    Loading
  </Text>
</div>
`;

exports[`<Spinner /> with additional className matches its snapshot 1`] = `
<div
  className="y-spinner y-spinner__color-light y-spinner__size-medium TEST_CLASSNAME"
>
  <Spinner
    ariaLive="polite"
    className="y-spinner--circle"
    size={2}
  />
  <Text
    className="y-spinner--label"
    color="primary"
    size="mediumSub"
  >
    Loading
  </Text>
</div>
`;

exports[`<Spinner /> with invisible text matches its snapshot 1`] = `
<div
  className="y-spinner y-spinner__color-light y-spinner__size-medium"
>
  <Spinner
    ariaLive="polite"
    className="y-spinner--circle"
    size={2}
  />
  <ScreenreaderText>
    Loading
  </ScreenreaderText>
</div>
`;

exports[`<Spinner /> with visible text matches its snapshot 1`] = `
<div
  className="y-spinner y-spinner__color-light y-spinner__size-medium"
>
  <Spinner
    ariaLive="polite"
    className="y-spinner--circle"
    size={2}
  />
  <Text
    className="y-spinner--label"
    color="primary"
    size="mediumSub"
  >
    Loading
  </Text>
</div>
`;
